--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
 ---
-Hello World, creating webpage for Greg.  This is for testing purposes.
+Hello World, webpage created for Greg's data science projects.  Currently under construction. 
 
 
